<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliceblue" >

    <LinearLayout
        android:id="@+id/systemActivity_ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/system_activity" >

        <Button
            android:id="@+id/systemActivity_btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_size_minimal"
            android:background="@drawable/systemactivity_buttonselector_back" />

        <TextView
            android:id="@+id/systemActivity_tv_title"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/margin_size_minimal"
            android:text="@string/system_tv_title"
            android:textSize="@dimen/font_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/systemActivity_btn_backupAndRestore"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/systemactivity_buttonselector_color"
            android:text="@string/system_btn_backupAndRestore" />

        <Button
            android:id="@+id/systemActivity_btn_help"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/systemactivity_buttonselector_color"
            android:text="@string/system_btn_help" />

        <Button
            android:id="@+id/systemActivity_btn_feedback"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/systemactivity_buttonselector_color"
            android:text="@string/system_btn_feedback" />

        <Button
            android:id="@+id/systemActivity_btn_about"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/systemactivity_buttonselector_color"
            android:text="@string/system_btn_about" />

        
    </LinearLayout>

</RelativeLayout>