<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/statisticsManage_activity" >

        <Button
            android:id="@+id/statisticsDetailsActivity_btn_barChart"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/statisticsmanageactivity_buttonselector_color"
            android:text="@string/statisticsDetails_btn_barChart" />

        <Button
            android:id="@+id/statisticsDetailsActivity_btn_lineChart"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/statisticsmanageactivity_buttonselector_color"
            android:text="@string/statisticsDetails_btn_lineChart"
            android:visibility="gone" />

        <Button
            android:id="@+id/statisticsDetailsActivity_btn_pieChart"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/statisticsmanageactivity_buttonselector_color"
            android:text="@string/statisticsDetails_btn_pieChart" />

        <Button
            android:id="@+id/statisticsDetailsActivity_btn_back"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/statisticsmanageactivity_buttonselector_color"
            android:text="@string/general_btn_back" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/statisticsDetailsActivity_fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

</LinearLayout>